--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -183,7 +183,7 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: ""
-    runs-on: 4-gpu-a10
+    runs-on: h200
     timeout-minutes: ${{ matrix.timeout }}
     steps:
       - name: Checkout code
