--- a/tokenizer/Cargo.toml
+++ b/tokenizer/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
 tracing.workspace = true
 uuid = { workspace = true, features = ["v4", "serde"] }
 # Only used by tokenizer
+aho-corasick = "1.1"
 hf-hub = { version = "0.4.3", features = ["tokio"] }
 minijinja = { version = "2.0", features = ["unstable_machinery", "json", "builtins"] }
 minijinja-contrib = { version = "2.0", features = ["pycompat"] }
@@ -38,6 +39,11 @@ tiktoken-rs = "0.7.0"
 tokenizers = "0.22.0"
 
 [dev-dependencies]
+criterion = "0.5"
 openai-protocol.workspace = true
 reqwest = { workspace = true, features = ["blocking"] }
 tempfile = "3.8"
+
+[[bench]]
+name = "stop_sequence_search"
+harness = false
