--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -283,8 +283,45 @@ jobs:
           docker stop oracle-db || true
           docker rm oracle-db || true
 
-  go-bindings:
-    name: go-bindings
+  go-unit-tests:
+    name: go-unit-tests
+    needs: [check-ci]
+    if: needs.check-ci.outputs.should_run == 'true'
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+          cache: true
+          cache-dependency-path: bindings/golang/go.sum
+
+      - name: Setup Rust
+        uses: ./.github/actions/setup-rust
+
+      - name: Build Go FFI library
+        run: |
+          source "$HOME/.cargo/env"
+          cd bindings/golang
+          make build
+          echo "Go FFI library built successfully"
+          ls -la target/release/libsmg_go.*
+
+      - name: Run Go unit tests
+        run: |
+          cd bindings/golang
+          export CGO_LDFLAGS="-L$(pwd)/target/release"
+          export LD_LIBRARY_PATH="$(pwd)/target/release:$LD_LIBRARY_PATH"
+          go test -v ./...
+
+  go-bindings-e2e:
+    name: go-bindings-e2e
     needs: [check-ci, build-wheel]
     if: needs.check-ci.outputs.should_run == 'true'
     runs-on: 4-gpu-a10
@@ -332,13 +369,6 @@ jobs:
           pip uninstall -y smg || true
           pip install wheel/*.whl
 
-      - name: Run Go unit tests
-        run: |
-          cd bindings/golang
-          export CGO_LDFLAGS="-L$(pwd)/target/release"
-          export LD_LIBRARY_PATH="$(pwd)/target/release:$LD_LIBRARY_PATH"
-          go test -v ./...
-
       - name: Install test dependencies
         run: |
           python3 -m pip install pytest pytest-rerunfailures httpx openai grpcio grpcio-health-checking numpy
@@ -352,7 +382,7 @@ jobs:
             pytest --reruns 2 --reruns-delay 5 e2e_test/bindings_go -s -vv -o log_cli=true --log-cli-level=INFO
 
   finish:
-    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-bindings]
+    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e]
     if: always()
     runs-on: ubuntu-latest
     permissions: {}
@@ -362,7 +392,7 @@ jobs:
           if [[ "${{ needs.check-ci.outputs.should_run }}" != "true" ]]; then
             echo "CI was skipped (external contributor without run-ci label)"
             exit 0
-          elif [[ "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-bindings.result }}" == "failure" ]]; then
+          elif [[ "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" ]]; then
             echo "One or more jobs failed"
             exit 1
           else
