fix(go-bindings): add safety docs and fix clippy warnings
Add `# Safety` documentation to all unsafe FFI functions in Go bindings
Rust code to comply with clippy::missing_safety_doc lint.

Changes:
- Add safety docs to 20 unsafe FFI functions across client, tokenizer,
  tool_parser, grpc_converter, preprocessor, postprocessor, utils
- Mark error helper functions as unsafe (they dereference raw pointers)
- Fix needless_borrow, redundant_closure, explicit_auto_deref warnings
- Simplify as_ref().map() to as_deref()
- Add Go bindings Rust lint and fmt checks to CI workflow

The Go bindings Rust code was previously excluded from workspace clippy.
Now CI will run clippy and fmt on bindings/golang separately.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -151,6 +151,18 @@ jobs:
           rustup toolchain install nightly --profile minimal
           cargo +nightly fmt -- --check
 
+      - name: Run Go bindings Rust lint
+        run: |
+          source "$HOME/.cargo/env"
+          cd bindings/golang
+          cargo clippy --all-targets -- -D warnings
+
+      - name: Run Go bindings Rust fmt
+        run: |
+          source "$HOME/.cargo/env"
+          cd bindings/golang
+          cargo +nightly fmt -- --check
+
       - name: Generate vision golden fixtures
         run: |
           pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
