--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -186,6 +186,7 @@ jobs:
             reruns: ""
             upload_benchmarks: true
             parallel_opts: ""  # No parallel for benchmarks (performance measurement)
+            setup_sglang: true
           - name: responses
             timeout: 45
             test_dirs: "e2e_test/responses"
@@ -195,6 +196,7 @@ jobs:
             setup_oracle: true
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
+            setup_sglang: true
           - name: e2e
             timeout: 45
             test_dirs: "e2e_test/router e2e_test/embeddings"
@@ -202,6 +204,7 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
+            setup_sglang: true
           - name: chat-completions
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
@@ -209,6 +212,17 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: ""
+            test_filter: "-k 'not vllm-grpc'"  # SGLang gRPC only
+            setup_sglang: true
+          - name: chat-completions-vllm
+            timeout: 45
+            test_dirs: "e2e_test/chat_completions"
+            extra_deps: ""
+            env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: ""
+            test_filter: "-k 'vllm-grpc'"  # vLLM gRPC only
+            setup_vllm: true
     runs-on: 4-gpu-a10
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -216,27 +230,29 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Clone SGLang repository
+        if: matrix.setup_sglang
         run: |
           git clone https://github.com/sgl-project/sglang.git
 
       - name: Install SGLang dependencies
+        if: matrix.setup_sglang
         run: |
           cd sglang
           sudo --preserve-env=PATH bash scripts/ci/cuda/ci_install_dependency.sh
 
       - name: Install vLLM for gRPC testing
-        if: matrix.name == 'chat-completions'
+        if: matrix.setup_vllm
         run: python3 -m pip install vllm
 
       - name: Cache flash-attn build
-        if: matrix.name == 'chat-completions'
+        if: matrix.setup_vllm
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip/wheels
           key: flash-attn-${{ runner.os }}-py310-${{ hashFiles('**/setup.py') }}
 
       - name: Install flash-attn for vLLM
-        if: matrix.name == 'chat-completions'
+        if: matrix.setup_vllm
         run: |
           python3 -m pip install flash-attn --no-build-isolation
           python3 -m pip uninstall -y flashinfer flashinfer-python flashinfer-cubin flashinfer-jit-cache 2>/dev/null || true
@@ -306,7 +322,7 @@ jobs:
       - name: Run E2E tests
         run: |
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
-          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.test_dirs }} -s -vv -o log_cli=true --log-cli-level=INFO
+          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
 
       - name: Upload benchmark results
         if: matrix.upload_benchmarks && success()
