test(go-bindings): expand E2E test coverage and add performance benchmarks
Problem Statement
-----------------
The Go bindings for the OAI-compatible server had limited test coverage with
only ~9 tests covering basic functionality. This created several gaps:

1. Response Field Validation Gap: No verification that OpenAI-compatible
   response fields (id, created, model, usage, system_fingerprint) were
   correctly populated. This is critical for API compatibility since clients
   depend on these fields for request tracking, billing, and debugging.

2. Token Usage Verification Gap: No tests verified that prompt_tokens,
   completion_tokens, and total_tokens were being correctly reported. Token
   usage is essential for cost tracking and quota management in production.

3. Streaming Protocol Gap: No validation that streaming responses followed
   the SSE protocol correctly - specifically that finish_reason appears
   exactly once per choice and that all chunks share the same request ID.

4. Concurrency Gap: No tests for concurrent request handling. The Go OAI
   server will handle multiple simultaneous requests in production, and
   race conditions or resource contention could cause silent failures.

5. Edge Case Gap: No tests for boundary conditions like empty messages,
   long contexts, stop sequences, or the n parameter for multiple choices.

6. Performance Visibility Gap: No benchmarks to measure Go FFI overhead.
   Without baseline metrics, performance regressions could go undetected
   and it's impossible to quantify the cost of the FFI abstraction layer.

Solution Implementation
-----------------------
Added 4 new test classes with 14 new tests (total now 23 tests):

TestGoOAIServerResponseValidation (6 tests):
- test_response_fields_non_streaming: Validates id prefix (chatcmpl-),
  created timestamp, model field, choice structure with index/role/content
- test_response_fields_streaming: Verifies chunk ID consistency across
  stream, validates finish_reason app

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -393,8 +393,75 @@ jobs:
           SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1 ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" \
             pytest --reruns 2 --reruns-delay 5 e2e_test/bindings_go -s -vv -o log_cli=true --log-cli-level=INFO
 
+  go-bindings-benchmark:
+    name: go-bindings-benchmark
+    needs: [check-ci, build-wheel]
+    if: needs.check-ci.outputs.should_run == 'true'
+    runs-on: 4-gpu-a10
+    timeout-minutes: 32
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Clone SGLang repository
+        run: git clone https://github.com/sgl-project/sglang.git
+
+      - name: Install SGLang dependencies
+        run: |
+          cd sglang
+          sudo --preserve-env=PATH bash scripts/ci/cuda/ci_install_dependency.sh
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+          cache: true
+          cache-dependency-path: bindings/golang/go.sum
+
+      - name: Download Go FFI library
+        uses: actions/download-artifact@v7
+        with:
+          name: go-ffi-library
+          path: bindings/golang/target/release/
+
+      - name: Verify Go FFI library
+        run: ls -la bindings/golang/target/release/libsmg_go.*
+
+      - name: Download wheel artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: smg-wheel
+          path: wheel/
+
+      - name: Install wheel
+        run: |
+          pip uninstall -y smg || true
+          pip install wheel/*.whl
+
+      - name: Install test dependencies
+        run: |
+          python3 -m pip install pytest pytest-rerunfailures httpx openai grpcio grpcio-health-checking numpy
+          python3 -m pip --no-cache-dir install --upgrade genai-bench==0.0.3
+
+      - name: Run Go bindings benchmark
+        run: |
+          bash scripts/ci_killall_sglang.sh "nuk_gpus"
+          export CGO_LDFLAGS="-L$(pwd)/bindings/golang/target/release"
+          export LD_LIBRARY_PATH="$(pwd)/bindings/golang/target/release:$LD_LIBRARY_PATH"
+          SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1 ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" \
+            pytest e2e_test/benchmarks/test_go_bindings_perf.py -s -vv -o log_cli=true --log-cli-level=INFO
+
+      - name: Upload benchmark results
+        if: success()
+        uses: actions/upload-artifact@v6
+        with:
+          name: genai-bench-results-go-bindings
+          path: benchmark_go_bindings/
+
   finish:
-    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e]
+    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e, go-bindings-benchmark]
     if: always()
     runs-on: ubuntu-latest
     permissions: {}
@@ -404,7 +471,7 @@ jobs:
           if [[ "${{ needs.check-ci.outputs.should_run }}" != "true" ]]; then
             echo "CI was skipped (external contributor without run-ci label)"
             exit 0
-          elif [[ "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" ]]; then
+          elif [[ "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" || "${{ needs.go-bindings-benchmark.result }}" == "failure" ]]; then
             echo "One or more jobs failed"
             exit 1
           else
