--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -161,6 +161,7 @@ jobs:
             reruns: ""
             upload_benchmarks: true
             parallel_opts: ""  # No parallel for benchmarks (performance measurement)
+            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py"  # Go benchmark runs in dedicated job
           - name: responses
             timeout: 45
             test_dirs: "e2e_test/responses"
@@ -170,6 +171,7 @@ jobs:
             setup_oracle: true
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
+            ignore_opts: ""
           - name: e2e
             timeout: 45
             test_dirs: "e2e_test/router e2e_test/embeddings"
@@ -177,6 +179,7 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
+            ignore_opts: ""
           - name: chat-completions-sglang
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
@@ -185,6 +188,7 @@ jobs:
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: ""
             test_filter: ""
+            ignore_opts: ""
           - name: chat-completions-vllm
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
@@ -196,6 +200,7 @@ jobs:
             # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
             test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
             setup_vllm: true
+            ignore_opts: ""
     runs-on: k8s-runner-gpu
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -281,7 +286,7 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
-          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
+          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.ignore_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
 
       - name: Upload benchmark results
         if: matrix.upload_benchmarks && success()
