--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -202,27 +202,56 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
-          - name: chat-completions
+          - name: chat-completions-sglang
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
             extra_deps: ""
-            env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            env_vars: "E2E_RUNTIME=sglang SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: ""
+            test_filter: ""
+          - name: chat-completions-vllm
+            timeout: 45
+            test_dirs: "e2e_test/chat_completions"
+            extra_deps: ""
+            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: ""
+            # TODO: Remove filter when vLLM supports logprobs and n>1 with greedy sampling
+            # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
+            test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
+            setup_vllm: true
     runs-on: 4-gpu-a10
     timeout-minutes: ${{ matrix.timeout }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Clone SGLang repository
+      - name: Install inference backend (SGLang or vLLM)
         run: |
-          git clone https://github.com/sgl-project/sglang.git
+          if [ "${{ matrix.setup_vllm }}" == "true" ]; then
+            echo "Installing vLLM for gRPC testing..."
+            python3 -m pip install vllm
+          else
+            echo "Installing SGLang..."
+            git clone https://github.com/sgl-project/sglang.git
+            cd sglang
+            sudo --preserve-env=PATH bash scripts/ci/cuda/ci_install_dependency.sh
+          fi
 
-      - name: Install SGLang dependencies
+      - name: Cache flash-attn build
+        if: matrix.setup_vllm
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip/wheels
+          key: flash-attn-${{ runner.os }}-py310-${{ hashFiles('**/setup.py') }}
+
+      - name: Install flash-attn for vLLM
+        if: matrix.setup_vllm
         run: |
-          cd sglang
-          sudo --preserve-env=PATH bash scripts/ci/cuda/ci_install_dependency.sh
+          python3 -m pip install flash-attn --no-build-isolation
+          python3 -m pip uninstall -y flashinfer flashinfer-python flashinfer-cubin flashinfer-jit-cache 2>/dev/null || true
+          python3 -m pip install flashinfer-python==0.5.3 flashinfer-cubin==0.5.3
 
       - name: Setup Oracle Instant Client
         if: matrix.setup_oracle
@@ -288,7 +317,7 @@ jobs:
       - name: Run E2E tests
         run: |
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
-          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.test_dirs }} -s -vv -o log_cli=true --log-cli-level=INFO
+          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
 
       - name: Upload benchmark results
         if: matrix.upload_benchmarks && success()
