--- a/bindings/golang/Cargo.toml
+++ b/bindings/golang/Cargo.toml
@@ -18,6 +18,7 @@ once_cell = "1.21.3"
 futures-util = "0.3"
 tracing = "0.1"
 libc = "0.2.179"
+async-trait = "0.1"
 
 [dependencies.smg]
 path = "../../model_gateway"
