--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chron
 uuid = { version = "1.10" }
 wasmtime = { version = "41.0", features = ["component-model", "async"] }
 wasmtime-wasi = "41.0"
+tokio-util = { version = "0.7", features = ["sync"] }
+scopeguard = "1.2"
 
 [profile.release]
 opt-level = "z"     # Optimize for size
