fix(ci): download Go benchmark artifact into correct directory
The download-artifact step for Go bindings results was missing the
path parameter, so files were extracted into the working directory
root instead of benchmark_go_bindings/. The summarize script uses
rglob("benchmark_*") to discover results, so the Go benchmark was
not appearing in the summary.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -502,6 +502,7 @@ jobs:
       uses: actions/download-artifact@v7
       with:
         name: genai-bench-results-go-bindings
+        path: benchmark_go_bindings
 
     - name: Create benchmark summary
       run: python3 e2e_test/benchmarks/summarize.py .
