fix(go-bindings): use same max_requests as gateway benchmark (160)
Remove the overridden max_requests_per_run=640 so Go bindings benchmark
uses the same default (concurrency * 5 = 160) as the gateway benchmark
for a fair comparison.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -402,7 +402,7 @@ jobs:
     name: go-bindings-benchmark
     needs: [check-ci, build-wheel]
     if: needs.check-ci.outputs.should_run == 'true'
-    runs-on: 4-gpu-a10
+    runs-on: k8s-runner-gpu
     timeout-minutes: 32
     permissions:
       contents: read
